# pl-neon-recording

./: .copier-answers.yml  .coverage-tmp.html  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  LICENSE  Pipfile  README.md  README.rst  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  ruff.toml  setup.cfg  sitemap.xml  todo.txt  versions.json
.github/workflows/: main.yml  on-release-main.yml
contributing/: index.html
dev/: .coverage-tmp.html  404.html  dev.ipynb  imu_pb2.py  index.html  objects.inv  sitemap.xml
dev/contributing/: index.html
dev/coverage/: class_index.html  covindex.html  function_index.html  status.json  z_7f7ee2a2b532548a___init___py.html  z_7f7ee2a2b532548a_calib_py.html  z_7f7ee2a2b532548a_constants_py.html  z_7f7ee2a2b532548a_neon_recording_py.html  z_7f7ee2a2b532548a_utils_py.html  z_ab0d8f5a1aa0fc3c_audio_stream_py.html  z_ab0d8f5a1aa0fc3c_base_av_stream_py.html  z_ab0d8f5a1aa0fc3c_video_stream_py.html  z_b119f3ca2d353c10___init___py.html  z_b119f3ca2d353c10_array_record_py.html  z_b119f3ca2d353c10_blink_stream_py.html  z_b119f3ca2d353c10_event_stream_py.html  z_b119f3ca2d353c10_eye_state_stream_py.html  z_b119f3ca2d353c10_fixation_stream_py.html  z_b119f3ca2d353c10_gaze_stream_py.html  z_b119f3ca2d353c10_stream_py.html  z_b119f3ca2d353c10_worn_stream_py.html  z_ba9db6fb9108c227___init___py.html  z_ba9db6fb9108c227_imu_pb2_py.html  z_ba9db6fb9108c227_imu_stream_py.html  z_c01cdd8ab1b5178a___init___py.html  z_c01cdd8ab1b5178a_array_like_py.html  z_c01cdd8ab1b5178a_constants_py.html  z_c01cdd8ab1b5178a_frame_py.html  z_c01cdd8ab1b5178a_frame_slice_py.html  z_c01cdd8ab1b5178a_indexing_py.html  z_c01cdd8ab1b5178a_multi_reader_py.html  z_c01cdd8ab1b5178a_reader_py.html  z_c01cdd8ab1b5178a_writer_py.html
docs/: api.rst  conf.py  index.md  index.rst  license.md  modules.md
examples/: api_overview.py  basic.py  basic_usage.py  blinks.py  blinks_and_fixations.py  compare_sample_methods.py  compare_test_sample_methods.py  csv_export.py  data_access.py  events.py  export_matched_imu_gaze.py  eye_lid.py  eye_overlay.py  eye_state.py  eyeball.py  find_clap.py  flexible_data_access.py  gaze_overlay.py  gaze_overlay_with_audio.py  imu.py  interpolation_compare.py  load_video_as_numpy_array.py  make_gaze_overlay_video.py  multi_gaze_overlay.py  print_diagnostic_info.py  sample_and_iterate_streams.py  test_sample_generators.py  utils.py  worn.py
license/: index.html
modules/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  make-dummy-recording.py  test_api.py  test_calibration.py  test_neon_recording.py  test_sample_methods.py  test_sensor_access.py  utils.py
v0.9.0/: .coverage-tmp.html  404.html  index.html  sitemap.xml
v1.0.0/: .coverage-tmp.html  404.html  index.html  sitemap.xml
v1.0.0rc1/: .coverage-tmp.html  404.html  index.html  objects.inv  sitemap.xml
v1.0.1/: .coverage-tmp.html  404.html  index.html  sitemap.xml
v1.0.2/: .coverage-tmp.html  404.html  index.html  sitemap.xml
v1.0.3/: .coverage-tmp.html  404.html  index.html  sitemap.xml
v2.0.0/: .coverage-tmp.html  404.html  index.html  sitemap.xml
v2.0.1/: .coverage-tmp.html  404.html  index.html  objects.inv  sitemap.xml
v2.1.0/: .coverage-tmp.html  404.html  index.html  objects.inv  sitemap.xml
v2.1.1/: .coverage-tmp.html  404.html  index.html  objects.inv  sitemap.xml
v2.1.2/: .coverage-tmp.html  404.html  index.html  sitemap.xml
v2.1.3/: .coverage-tmp.html  404.html  index.html  sitemap.xml
v2.1.4/: .coverage-tmp.html  404.html  index.html  sitemap.xml
(+243 files in other folders)
