[project]

name = "pupil-labs-neon-recording"
description = "Functionality for loading Neon recordings in native recording format"
authors = [{ name = "Pupil Labs GmbH", email = "info@pupil-labs.com" }]
license = { text = "" }
readme = "README.md"
requires-python = ">=3.10, <4.0"
keywords = []
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy",
    "protobuf",
    "scipy",
    "pupil-labs-video",
]

[project.optional-dependencies]
examples = [
    "opencv-python",
    "tqdm",
]

[project.urls]
Homepage = "https://pupil-labs.github.io/pl-neon-recording"
Documentation = "https://pupil-labs.github.io/pl-neon-recording"
Repository = "https://github.com/pupil-labs/pl-neon-recording"
Issues = "https://github.com/pupil-labs/pl-neon-recording/issues"


[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "pre-commit>=2.20.0",
    "mypy>=0.991",
    "deptry>=0.20.0",
    "tox-uv>=1.11.3",
    "pytest-cov>=4.0.0",

    # docs
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocs>=1.6",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocstrings[python]>=0.25",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["pupil_labs"]

[tool.deptry.per_rule_ignores]
DEP001 = ["pupil_labs"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/pupil_labs"]
