[metadata]
name = pl-neon-recording
description = An API for working with raw data from Neon recordings
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pupil-labs/pl-neon-recording
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find_namespace:
install_requires =
    importlib-metadata;python_version<"3.8"
    numpy
    protobuf
    pandas
    scipy
    av
    structlog
python_requires = >=3.8
include_package_data = true
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.extras_require]
examples =
    opencv-python
    tqdm
docs =
    jaraco.packaging>=9
    rst.linker>=1.9
    sphinx
testing =
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.3
    pytest-mypy>=0.9.1;python_implementation != "PyPy"
